--- a/styles/bio.css
+++ b/styles/bio.css
@@ -138,6 +138,7 @@ h3 {
   width: 100%;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  height: 48vh;
 }
 .musician__quote {
   font-weight: 600;
@@ -333,6 +334,7 @@ h3 {
   .musician__image {
     padding-left: 3rem;
     padding-right: 3rem;
+    height: 50vh;
   }
   .musician__text {
     padding-left: 3rem;
@@ -342,7 +344,7 @@ h3 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 1.25rem;
+    gap: 2rem;
   }
   .paragraph__text {
     padding-top: 0px;
@@ -422,6 +424,11 @@ h3 {
   .header {
     padding-left: 160px;
     padding-right: 160px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .header__image {
+    height: 80vh;
   }
   .header__image-title {
     padding-left: 160px;
@@ -434,9 +441,24 @@ h3 {
   .musician__image {
     padding-left: 160px;
     padding-right: 160px;
+    height: 60vh;
+  }
+  .musician__text {
+    padding-left: 160px;
+    padding-right: 160px;
+  }
+  .musician__quote {
+    padding-right: 20%;
+  }
+  .paragraph__sections {
+    gap: 2.5rem;
   }
   .footer {
     padding-left: 160px;
     padding-right: 160px;
+  }
+  .contact__info {
+    justify-content: flex-start;
+    gap: 140px;
   }
 }/*# sourceMappingURL=bio.css.map */
