--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -137,6 +137,7 @@ h3 {
         width: 100%;
         padding-top: 1rem;
         padding-bottom: 1rem;
+        height: 48vh;
     }
 
     &__quote {
@@ -369,7 +370,7 @@ h3 {
         &__image {
             padding-left: 3rem;
             padding-right: 3rem;
-            // transform: translateY(-14%);
+            height: 50vh;
         }
 
         &__text {
@@ -383,7 +384,7 @@ h3 {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            gap: 1.25rem;
+            gap: 2rem;
         }
 
         &__text {
@@ -477,8 +478,11 @@ h3 {
 @media (min-width: $desktop-break-point) {
     .header {
         @include desktop-padding-left-right;
+        padding-top: 30px;
+        padding-bottom: 30px;
 
         &__image {
+            height: 80vh;
             &-title {
                 @include desktop-padding-left-right;
             }
@@ -494,10 +498,28 @@ h3 {
     .musician {
         &__image {
             @include desktop-padding-left-right;
+            height: 60vh;
+        }
+        &__text{
+            @include desktop-padding-left-right;
+        }
+        &__quote{
+            padding-right: 20%;
+        }
+    }
+
+    .paragraph {
+        &__sections {
+            gap: 2.5rem;
         }
     }
 
     .footer {
         @include desktop-padding-left-right;
+    }
+
+    .contact__info{
+        justify-content: flex-start;
+        gap: 140px;
     }
 }
