--- a/styles/bio.css
+++ b/styles/bio.css
@@ -71,7 +71,7 @@ h3 {
   transform: scaleX(1);
 }
 .header__image {
-  background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/Images/hero-bio.jpg");
+  background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/images/hero-bio.jpg");
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -96,7 +96,7 @@ h3 {
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   padding-top: 3rem;
   padding-bottom: 2.25rem;
@@ -105,19 +105,22 @@ h3 {
   padding-bottom: 1rem;
 }
 
-.musician__image-container {
-  position: relative;
-  overflow: hidden;
+.image__container {
+  aspect-ratio: 16/9;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  height: 20rem;
 }
+
 .musician__image {
-  box-sizing: border-box;
-  display: block;
   width: 100%;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  height: 48vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: -10px;
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 .musician__quote {
   font-weight: 600;
@@ -165,6 +168,60 @@ h3 {
 }
 .photo-filter:hover {
   filter: none;
+}
+
+.form {
+  padding-left: 28px;
+  padding-right: 28px;
+}
+.form__title {
+  padding-top: 20px;
+}
+.form__content {
+  display: flex;
+  padding-top: 20px;
+}
+.form__avatar {
+  margin-top: 10px;
+  width: 60px;
+  height: 60px;
+  background-color: #E1E1E1;
+  border-radius: 50%;
+  display: inline-block;
+}
+.form__comment {
+  display: flex;
+  flex-direction: column;
+  padding-left: 26px;
+  width: 100%;
+}
+.form__label {
+  color: #AFAFAF;
+  font-weight: 600;
+}
+.form__label--modified {
+  margin-top: 20px;
+}
+.form__input {
+  margin-top: 10px;
+  width: calc(100% - 2rem);
+  padding: 10px 20px;
+}
+.form__input::-moz-placeholder {
+  color: #323232;
+}
+.form__input::placeholder {
+  color: #323232;
+}
+.form__comment-button {
+  margin: auto;
+  font-size: 1.8rem;
+  color: white;
+  padding: 22px 0px;
+  width: 100%;
+  background-color: #323232;
+  border-radius: 8px;
+  margin: 15px 0px;
 }
 
 .footer {
@@ -342,6 +399,19 @@ p.copyright {
     line-height: 2.75rem;
     color: #323232;
   }
+  .image__container {
+    aspect-ratio: 16/8;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .musician__image {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    width: 100%;
+    -o-object-position: center;
+       object-position: center;
+  }
   .musician__quote {
     font-size: 1.375rem;
     line-height: 1.3;
@@ -354,11 +424,6 @@ p.copyright {
   }
   .musician__image-container {
     height: 19.375rem;
-  }
-  .musician__image {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    height: 50vh;
   }
   .musician__text {
     padding-left: 3rem;
@@ -473,10 +538,18 @@ p.copyright {
     padding-left: 140px;
     padding-right: 140px;
   }
+  .image__container {
+    aspect-ratio: 2/1;
+    display: flex;
+    justify-content: center;
+  }
   .musician__image {
     padding-left: 90px;
     padding-right: 90px;
-    height: 60vh;
+    height: 45vh;
+    width: 100%;
+    -o-object-position: center;
+       object-position: center;
   }
   .musician__text {
     padding-left: 90px;
