--- a/styles/bio.css
+++ b/styles/bio.css
@@ -88,12 +88,19 @@ ul {
   font-weight: 100;
   color: #FFFFFF;
 }
+.header__nav--show:active {
+  font-weight: 600;
+  color: #FFFFFF;
+}
+.header__nav--show:active::after {
+  transform: scaleX(1);
+}
 .header__image {
   background: linear-gradient(rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url("../assets/images/hero-bio.jpg");
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 56vh;
+  height: 50vh;
   position: relative;
 }
 .header__image-title {
@@ -429,7 +436,8 @@ p.copyright {
   .header__nav--bio {
     position: relative;
     display: inline-block;
-    font-weight: 100;
+    font-weight: 600;
+    color: #FFFFFF;
   }
   .header__nav--bio::after {
     position: absolute;
@@ -438,47 +446,33 @@ p.copyright {
     height: 4px;
     background-color: white;
     bottom: -25px;
-    left: 50px;
-    transform: scaleX(0);
-  }
-  .header__nav--bio:hover::after {
     transform: scaleX(1);
+    left: 48px;
   }
-  .header__nav--bio:hover {
-    color: #FFFFFF;
-  }
-  .header__nav--bio:active {
-    font-weight: 600;
-    color: #FFFFFF;
-  }
-  .header__nav--bio:active::after {
-    transform: scaleX(1);
-  }
-  .header__nav--shows {
+  .header__nav--show {
     position: relative;
     display: inline-block;
+    font-weight: 100;
   }
-  .header__nav--shows::after {
+  .header__nav--show:hover::after {
     position: absolute;
     content: "";
     width: 60%;
     height: 4px;
     background-color: white;
     bottom: -25px;
-    left: 45px;
-    transform: scaleX(0);
-  }
-  .header__nav--shows:hover::after {
     transform: scaleX(1);
+    left: 46px;
   }
-  .header__nav--shows:hover {
+  .header__nav--show:hover {
+    font-weight: 100;
     color: #FFFFFF;
   }
-  .header__nav--shows:active {
+  .header__nav--show:active {
     font-weight: 600;
     color: #FFFFFF;
   }
-  .header__nav--shows:active::after {
+  .header__nav--show:active::after {
     transform: scaleX(1);
   }
   .header__image {
@@ -616,6 +610,49 @@ p.copyright {
   .copyright--mobile {
     display: none;
   }
+  .form__content {
+    padding: 20px 56px;
+  }
+  .divider {
+    margin: 0 56px;
+  }
+  .form__avatar--modified,
+  .form__avatar {
+    width: 60px;
+    height: 60px;
+  }
+  .form__label {
+    font-size: 16px;
+    padding-top: 20px;
+  }
+  .form__label--modified {
+    margin-top: 10px;
+  }
+  .form__input,
+  .form__input--modified {
+    font-size: 1.2rem;
+  }
+  .form__input, .form__input--modified {
+    height: 40px;
+    background-color: #FAFAFA;
+  }
+  .form__input--modified {
+    height: 90px;
+  }
+  .form__comment-button {
+    width: 30%;
+    align-self: flex-end;
+    padding: 10px 0;
+    font-size: 1.2rem;
+  }
+  .comment-name,
+  .comment-date {
+    font-size: 1.2rem;
+  }
+  .comment-content {
+    font-size: 1rem;
+    line-height: 1.4;
+  }
 }
 @media (min-width: 1280px) {
   .header {
@@ -627,7 +664,7 @@ p.copyright {
   .header__nav--bio::after {
     bottom: -38px;
   }
-  .header__nav--shows::after {
+  .header__nav--show:hover::after {
     bottom: -38px;
   }
   .header__image {
@@ -668,8 +705,25 @@ p.copyright {
     padding-left: 160px;
     padding-right: 160px;
   }
+  .footer__title--bottom {
+    display: none;
+  }
   .contact__info {
     justify-content: flex-start;
     gap: 140px;
+  }
+  .form {
+    padding: 0 140px;
+  }
+  .form__content {
+    padding: 10px 240px;
+  }
+  article {
+    padding-left: 140px;
+    padding-right: 140px;
+  }
+  .divider {
+    margin-left: 240px;
+    margin-right: 240px;
   }
 }/*# sourceMappingURL=bio.css.map */
