final version- draft

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -688,6 +688,10 @@ p.copyright{
         font-size: 1rem;
         line-height: 1.4;
     }
+
+    .footer__title--bottom {
+        display: none;
+    }
 }
 
 @media (min-width: $desktop-break-point) {
