--- a/styles/bio.css
+++ b/styles/bio.css
@@ -653,6 +653,9 @@ p.copyright {
     font-size: 1rem;
     line-height: 1.4;
   }
+  .footer__title--bottom {
+    display: none;
+  }
 }
 @media (min-width: 1280px) {
   .header {
