--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -736,7 +736,7 @@ p.copyright{
         &__image {
             padding-left: 90px;
             padding-right: 90px;
-            height: 45vh;
+            // height: 45vh;
             width: 100%;
             object-position: center;
         }
